[gd_scene load_steps=2 format=3 uid="uid://ct18o8uebe4yt"]

[ext_resource type="Script" path="res://ui/gameplay_menu_screen.gd" id="1_cvqa2"]

[node name="GameplayMenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cvqa2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -33.0
offset_right = 61.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ContinueRunButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue Run"

[node name="NewRunButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New Run"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ContinueRunButton" to="." method="_on_continue_run_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/NewRunButton" to="." method="_on_new_run_button_pressed"]
